<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BabySPA" >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewtitle"
        android:scaleType="centerInside"
        android:src="@drawable/duck1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_toRightOf="@+id/textViewtitle"
        android:src="@drawable/duck2" />

    <TextView
        android:id="@+id/textViewisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/about" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView5"
        android:scaleType="fitXY"
        android:src="@drawable/aa" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/textViewisi"
        android:layout_below="@+id/textViewisi"
        android:scaleType="fitXY"
        android:src="@drawable/babyspa" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignTop="@+id/go"
        android:text="Login Admin" />

    <TextView
        android:id="@+id/textViewtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView2"
        android:text="@string/go" />

</RelativeLayout>